Fix text overflow in playlist

--- a/src/sass/player.sass
+++ b/src/sass/player.sass
@@ -224,6 +224,9 @@
                     position: absolute
                     left: 0
                 .penguin-player__player--playlist-title, .penguin-player__player--playlist-artists
+                    white-space: nowrap
+                    overflow: hidden
+                    text-overflow: ellipsis
                     margin: 0
                 .penguin-player__player--playlist-title
                     font-size: 14px
